Changed weapon coef

--- a/configs/FirePlayersStats/settings.ini
+++ b/configs/FirePlayersStats/settings.ini
@@ -26,47 +26,45 @@
 
 	"WeaponCoeff"
 	{
-		// Здесь вы можете указать множители очков опыта.
+		// Здесь вы можете указать множители очков опыта. Начисление доп.опыта для гранат невозможно!
 		// Как действует формула: получаемые очки опыта умножаются на коэффициент оружия, с которого убили
 		// Насколько умножать очки опыта, если вы убили с ...
 
-		"knife"				"1.8"	// Нож
+		"knife"				"2.0"	// Нож
 		"taser"				"1.8"	// Зевс x27
-		"inferno"			"1.6"	// Молотов
-		"hegrenade"			"1.6"	// Граната
-		"glock"				"1.4"	// Glock
-		"hkp2000"			"1.3"	// P2000
-		"tec9"				"1.2"	// Tec-9
-		"usp_silencer"		"1.3"	// USP-S
-		"p250"				"1.2"	// P250
-		"cz75a"				"1.2"	// CZ-75a
-		"fiveseven"			"1.2"	// Five Seven
-		"elite"				"1.3"	// Dual Berettas
-		"revolver"			"1.4"	// Revolver
+		"glock"				"1.5"	// Glock
+		"hkp2000"			"1.4"	// P2000
+		"tec9"				"1.3"	// Tec-9
+		"usp_silencer"		"1.4"	// USP-S
+		"p250"				"1.3"	// P250
+		"cz75a"				"1.3"	// CZ-75a
+		"fiveseven"			"1.3"	// Five Seven
+		"elite"				"1.4"	// Dual Berettas
+		"revolver"			"1.5"	// Revolver
 		"deagle"			"1.4"	// Desert Eagle
-		"negev"				"1.4"	// Negev
+		"negev"				"1.3"	// Negev
 		"m249"				"1.2"	// M249
-		"mag7"				"1.2"	// Mag-7
-		"sawedoff"			"1.2"	// Sawedoff
-		"nova"				"1.2"	// Nova
+		"mag7"				"1.3"	// Mag-7
+		"sawedoff"			"1.3"	// Sawedoff
+		"nova"				"1.3"	// Nova
 		"xm1014"			"1.1"	// XM1014
-		"bizon"				"1.1"	// Bizon
-		"mac10"				"1.1"	// MAC-10
-		"ump45"				"1.1"	// UMP-45
-		"mp9"				"1.1"	// MP9
-		"mp7"				"0.9"	// MP7
+		"bizon"				"1.3"	// Bizon
+		"mac10"				"1.2"	// MAC-10
+		"ump45"				"1.2"	// UMP-45
+		"mp9"				"1.2"	// MP9
+		"mp7"				"1.0"	// MP7
 		"p90"				"0.9"	// P90
-		"galilar"			"1.0"	// Galil AR
-		"famas"				"1.0"	// Famas
-		"ak47"				"0.9"	// AK-47
-		"m4a1"				"0.9"	// M4A4
-		"m4a1_silencer"		"0.9"	// M4A1-s
+		"galilar"			"1.1"	// Galil AR
+		"famas"				"1.1"	// Famas
+		"ak47"				"1.0"	// AK-47
+		"m4a1"				"1.0"	// M4A4
+		"m4a1_silencer"		"1.0"	// M4A1-s
 		"aug"				"0.7"	// AUG
 		"sg556"				"0.7"	// SG-553
-		"ssg08"				"1.4"	// SSG-08 (Scout)
+		"ssg08"				"1.5"	// SSG-08 (Scout)
 		"awp"				"0.8"	// AWP
 		"scar20"			"0.5"	// SCAR-20
 		"g3sg1"				"0.5"	// G3SG1
-		"mp5sd"				"1.0"	// MP5-SD
+		"mp5sd"				"1.3"	// MP5-SD
 	}
 }
