Fixed typo in config

--- a/configs/FirePlayersStats/settings.ini
+++ b/configs/FirePlayersStats/settings.ini
@@ -1,6 +1,6 @@
 "Config"
 {
-	"ExtraPoins"
+	"ExtraPoints"
 	{
 		// Дополнительные очки опыта за конкретные действие. 0 - Отключить.
 		"fps_headshot"				"3"			// Убийств в голову
