Update config for FPS_VipForTop

--- a/FPS_Modules/FPS_VipForTop/configs/FirePlayersStats/vip_for_top.ini
+++ b/FPS_Modules/FPS_VipForTop/configs/FirePlayersStats/vip_for_top.ini
@@ -1,6 +1,8 @@
 "Config"
 {
 	//"Место"		"Вип группа"
-	"1"				"vip"
+	"1"				"vip_top_1"
+	"2"				"vip_top_2"
+	"3"				"vip_top_3"
 	// Количество позиций неограниченно
 }
