--- a/configs/FirePlayersStats/settings.ini
+++ b/configs/FirePlayersStats/settings.ini
@@ -27,44 +27,58 @@
 	"WeaponCoeff"
 	{
 		// Здесь вы можете указать множители очков опыта. Начисление доп.опыта для гранат невозможно!
-		// Как действует формула: получаемые очки опыта умножаются на коэффициент оружия, с которого убили
+		// Как действует формула: получаемые очки опыта умножаются на коэффициент оружия, с которого убили.
 		// Насколько умножать очки опыта, если вы убили с ...
 
-		"knife"				"2.0"	// Нож
-		"taser"				"1.8"	// Зевс x27
-		"glock"				"1.5"	// Glock
-		"hkp2000"			"1.4"	// P2000
-		"tec9"				"1.3"	// Tec-9
-		"usp_silencer"		"1.4"	// USP-S
-		"p250"				"1.3"	// P250
-		"cz75a"				"1.3"	// CZ-75a
-		"fiveseven"			"1.3"	// Five Seven
-		"elite"				"1.4"	// Dual Berettas
-		"revolver"			"1.5"	// Revolver
-		"deagle"			"1.4"	// Desert Eagle
-		"negev"				"1.3"	// Negev
-		"m249"				"1.2"	// M249
-		"mag7"				"1.3"	// Mag-7
-		"sawedoff"			"1.3"	// Sawedoff
-		"nova"				"1.3"	// Nova
-		"xm1014"			"1.1"	// XM1014
-		"bizon"				"1.3"	// Bizon
-		"mac10"				"1.2"	// MAC-10
-		"ump45"				"1.2"	// UMP-45
-		"mp9"				"1.2"	// MP9
-		"mp7"				"1.0"	// MP7
-		"p90"				"0.9"	// P90
-		"galilar"			"1.1"	// Galil AR
-		"famas"				"1.1"	// Famas
-		"ak47"				"1.0"	// AK-47
-		"m4a1"				"1.0"	// M4A4
-		"m4a1_silencer"		"1.0"	// M4A1-s
-		"aug"				"0.7"	// AUG
-		"sg556"				"0.7"	// SG-553
-		"ssg08"				"1.5"	// SSG-08 (Scout)
-		"awp"				"0.8"	// AWP
-		"scar20"			"0.5"	// SCAR-20
-		"g3sg1"				"0.5"	// G3SG1
-		"mp5sd"				"1.3"	// MP5-SD
+		"default" // Множитель по конкретному оружия по умолчанию.
+		{
+			"knife"				"2.0"	// Нож
+			"taser"				"1.8"	// Зевс x27
+			"glock"				"1.5"	// Glock
+			"hkp2000"			"1.4"	// P2000
+			"tec9"				"1.3"	// Tec-9
+			"usp_silencer"		"1.4"	// USP-S
+			"p250"				"1.3"	// P250
+			"cz75a"				"1.3"	// CZ-75a
+			"fiveseven"			"1.3"	// Five Seven
+			"elite"				"1.4"	// Dual Berettas
+			"revolver"			"1.5"	// Revolver
+			"deagle"			"1.4"	// Desert Eagle
+			"negev"				"1.3"	// Negev
+			"m249"				"1.2"	// M249
+			"mag7"				"1.3"	// Mag-7
+			"sawedoff"			"1.3"	// Sawedoff
+			"nova"				"1.3"	// Nova
+			"xm1014"			"1.1"	// XM1014
+			"bizon"				"1.3"	// Bizon
+			"mac10"				"1.2"	// MAC-10
+			"ump45"				"1.2"	// UMP-45
+			"mp9"				"1.2"	// MP9
+			"mp7"				"1.0"	// MP7
+			"p90"				"0.9"	// P90
+			"galilar"			"1.1"	// Galil AR
+			"famas"				"1.1"	// Famas
+			"ak47"				"1.0"	// AK-47
+			"m4a1"				"1.0"	// M4A4
+			"m4a1_silencer"		"1.0"	// M4A1-s
+			"aug"				"0.7"	// AUG
+			"sg556"				"0.7"	// SG-553
+			"ssg08"				"1.5"	// SSG-08 (Scout)
+			"awp"				"0.8"	// AWP
+			"scar20"			"0.5"	// SCAR-20
+			"g3sg1"				"0.5"	// G3SG1
+			"mp5sd"				"1.3"	// MP5-SD
+		}
+
+		// Можно указзывать разные мноители по оружию для разных карт.
+		// Пример: У вас паблик сервер, на котором есть класические карты (Dust 2) и карта АВП Онли (Awp lego 2).
+		// Благодаря этой функции вы можете снизить множитель для АВП на Dust 2 ("awp"	"0.8") и выромнять его на Awp lego 2 ("awp"	"1.0").
+
+		"awp_lego_2"
+		{
+			"awp"				"1.0"
+			"deagle"			"1.5"
+			// При этом, множитель для ножа будет применен из секции "default".
+		}
 	}
 }
