--- a/FPS_Modules/FPS_UnusualKills/configs/FirePlayersStats/unusual_kills.ini
+++ b/FPS_Modules/FPS_UnusualKills/configs/FirePlayersStats/unusual_kills.ini
@@ -4,8 +4,8 @@
 	{
 		// Типы выдачи очков опыта:
 		// 0 - Не выдавать очки от модуля, только записи в БД;
-		// 1 - Выдавать очки опыта отдельным сообщением (из файла перевода);
-		// 2 - Прибавлять очки опыта за необычное убийство к "за убийство".
+		// 1 - Выдавать очки опыта с отдельным сообщением (из файла перевода);
+		// 2 - Выдавать очки опыта без сообщения (из файла перевода)".
 		"Exp_Mode" 				"1"
 		
 		// Текстовые команды, при вводе которых будет открыто меню с информацией о необычных убийствах.
