Added cvar sm_fps_info_message, responsible for displaying totals by points. Update FPS_UnusualKills for last core

--- a/cfg/sourcemod/FirePlayersStats.cfg
+++ b/cfg/sourcemod/FirePlayersStats.cfg
@@ -39,12 +39,12 @@ sm_fps_ranks_id "1"
 sm_fps_save_period "5"
 
 // [ RUS ]: Коэффициент расчета очков.
-// 			1.9 - Игрок теряет на 90% больше, чем получает за него убийца.
-// 			1.0 - Игрок теряет столько же очков опыта, сколько получает убийца.
+// 			1.9 - Игрок теряет на 90% больше, чем получает за него убийца;
+// 			1.0 - Игрок теряет столько же очков опыта, сколько получает убийца;
 // 			0.1 - Игрок теряет только 10% очков опыта, чем получает за него убийца.
 // [ ENG ]: Coefficient for calculating points.
-// 			1.9 - Player loses 90% more than killer gets for him.
-// 			1.0 - Player loses as many experience points as killer gets.
+// 			1.9 - Player loses 90% more than killer gets for him;
+// 			1.0 - Player loses as many experience points as killer gets;
 // 			0.1 - Player loses only 10% of experience points than killer gets.
 // -
 // Default: "1.0"
@@ -53,9 +53,9 @@ sm_fps_save_period "5"
 sm_fps_poins_coeff "1.0"
 
 // [ RUS ]: Время калибровки игрока. Снижает ущерб полученным всем, кого убил калибрующийся,
-// 			если присутствует значительная разница в поинтах, в течение времени в сек, . 0 - Отключить.
+// 			если присутствует значительная разница в поинтах, в течение времени в сек. 0 - Отключить.
 // [ ENG ]: Player calibration time. Reduces damage to received points by all those killed in moment by calibrating player,
-// 			if there is a significant difference in points. Indicate time in seconds,. 0 - Disable.
+// 			if there is a significant difference in points. Indicate time in seconds. 0 - Disable.
 // -
 // Default: "1800"
 // Minimum: "0.000000"
@@ -97,5 +97,25 @@ sm_fps_reset_stats_time "90000"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
 sm_fps_show_stats_everyone "1"
+
+// [ RUS ]: Префикс в чате. Поддерживает '{GREEN}' и т.д.
+// [ ENG ]: Chat prefix. Supports '{GREEN}', etc.
+// -
+// Default: "{GREEN}[ {RED}FPS {GREEN}] {DEFAULT}"
+sm_fps_chat_prefix "{GREEN}[ {RED}FPS {GREEN}] {DEFAULT}"
+
+// [ RUS ]: Уведомление от статистики об итогах получаемых поинтов.
+//			0 - Выключить;
+//			1 - Уведомление в конце раунда;
+//			2 - Уведомление при каждой смерти.
+// [ ENG ]: Notification from statistics on the results of points received.
+//			0 - turn off;
+//			1 - Notification at the end of round;
+//			2 - Notification at each death.
+// -
+// Default: "1"
+// Minimum: "0.000000"
+// Maximum: "2.000000"
+sm_fps_info_message "1"
 
 
