--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,17 +5,16 @@ UpdateData:
   tags:
     - docker
   #before_script:
-  #  - chmod +x get-updated-badge-info.sh
   script:
     - commits=`git rev-list --all --count`
-    - latest_release_tag=`git describe --abbrev=0`
-    - echo "{\"commits\":\"$commits\", \"release_tag\":\"$latest_release_tag\"}" > stats.json
+    - release=`git describe --abbrev=0`
+    - curl -i -X GET https://blackflash.ru/git-data/?file=fps-commits&data=Commits-${commits}-yellow
+    - curl -i -X GET https://blackflash.ru/git-data/?file=fps-release&data=Release-${release}-red
   #after_script:
-  #  - ./get-updated-badge-info.sh
-  artifacts:
-    paths:
-        - stats.json
-    when: always
-    expire_in: 4 weeks
+  # artifacts:
+  #   paths:
+  #       - stats.json
+  #   when: always
+  #   expire_in: 4 weeks
   only:
     - master
