Add cvar sm_fps_reset_modules_stats.

--- a/cfg/sourcemod/FirePlayersStats.cfg
+++ b/cfg/sourcemod/FirePlayersStats.cfg
@@ -92,6 +92,15 @@ sm_fps_block_stats_on_warmup "1"
 // Minimum: "0.000000"
 sm_fps_reset_stats_time "90000"
 
+// [ RUS ]: Разрешить модулям дополнительной статистики обнулять только свои данные, 
+//			независимо от основной статистики (Если эта возможность предусмотрена).
+// [ ENG ]: Allow additional statistics modules to reset only their data, 
+//			regardless of main statistics (if this option is provided).
+// -
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+sm_fps_reset_modules_stats "0"
+
 // [ RUS ]: Показывать статистику игрока всем при использовании команд просмотра позиции (sm_pos) (1 - Да / 0 - Нет).
 // [ ENG ]: Show player statistics to all when view personal position using command (sm_pos) (1 - Yes / 0 - No)
 // -
