Fixed FPS_UnusualKills #2.

--- a/FPS_Modules/FPS_UnusualKills/configs/FirePlayersStats/unusual_kills.ini
+++ b/FPS_Modules/FPS_UnusualKills/configs/FirePlayersStats/unusual_kills.ini
@@ -5,7 +5,7 @@
 		// Типы выдачи очков опыта:
 		// 0 - Не выдавать очки от модуля, только записи в БД;
 		// 1 - Выдавать очки опыта с отдельным сообщением (из файла перевода);
-		// 2 - Выдавать очки опыта без отдельным сообщения.
+		// 2 - Выдавать очки опыта без отдельного сообщения.
 		"Exp_Mode" 				"2"
 
 		// Исключённые оружия, за которые не будет выдавать очки опыта от модуля.
