Optimization of work. Possible load reduced. Now when deleting key "0" in "custom_ranks" calibration icon will not be set.

--- a/FPS_Modules/FPS_TabFakeRanks/addons/sourcemod/configs/FirePlayersStats/fake_ranks.ini
+++ b/FPS_Modules/FPS_TabFakeRanks/addons/sourcemod/configs/FirePlayersStats/fake_ranks.ini
@@ -7,7 +7,7 @@
 	"custom_ranks"
 	{
 		//"номер звания"	"Индекс вашего звания"
-		"0"					"42342340" // Индекс звания калибровки. Если удалить, будет установлено стандартная иконка.
+		"0"					"42342340" // Индекс звания калибровки. Удалите эту строку, чтобы не устанавливать!
 		"1"					"42342341"
 		"2"					"42342342"
 		"3"					"42342343"
