Fixed spelling error in config.

--- a/configs/FirePlayersStats/settings.ini
+++ b/configs/FirePlayersStats/settings.ini
@@ -70,9 +70,9 @@
 			"mp5sd"				"1.4"	// MP5-SD
 		}
 
-		// Можно указзывать разные мноители по оружию для разных карт.
-		// Пример: У вас паблик сервер, на котором есть класические карты (Dust 2) и карта АВП Онли (Awp lego 2).
-		// Благодаря этой функции вы можете снизить множитель для АВП на Dust 2 ("awp"	"0.8") и выромнять его на Awp lego 2 ("awp"	"1.0").
+		// Можно указзывать разные множители по оружию для разных карт.
+		// Пример: У вас паблик сервер, на котором есть классические карты (Dust 2) и карта АВП Онли (Awp lego 2).
+		// Благодаря этой функции вы можете снизить множитель для АВП на Dust 2 ("awp"	"0.8") и увеличить его на Awp lego 2 ("awp"	"1.0").
 
 		"awp_lego_2"
 		{
