Added cvar sm_fps_ignore_new_players. Now when UPDATE_SERVER_DATA is 0, server name will not be updated.

--- a/cfg/sourcemod/FirePlayersStats.cfg
+++ b/cfg/sourcemod/FirePlayersStats.cfg
@@ -129,4 +129,12 @@ sm_fps_chat_prefix "{GREEN}[ {RED}FPS {GREEN}] {DEFAULT}"
 // Maximum: "2.000000"
 sm_fps_info_message "1"
 
+// [ RUS ]: Не выводить некоткалеброваных игроков в списки ТОП-ов. 0 - Отключить.
+// [ ENG ]: Do not display non-calibrated players in TOP lists. 0 - Disable.
+// -
+// Default: "1"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+sm_fps_ignore_new_players "1"
+
 
