--- a/cfg/sourcemod/FirePlayersStats.cfg
+++ b/cfg/sourcemod/FirePlayersStats.cfg
@@ -129,7 +129,7 @@ sm_fps_chat_prefix "{GREEN}[ {RED}FPS {GREEN}] {DEFAULT}"
 // Maximum: "2.000000"
 sm_fps_info_message "1"
 
-// [ RUS ]: Не выводить некоткалеброваных игроков в списки ТОП-ов. 0 - Отключить.
+// [ RUS ]: Не выводить неоткалиброванных игроков в списки ТОП-ов. 0 - Отключить.
 // [ ENG ]: Do not display non-calibrated players in TOP lists. 0 - Disable.
 // -
 // Default: "1"
