Optimized getting value of additional points for weapons

--- a/configs/FirePlayersStats/settings.ini
+++ b/configs/FirePlayersStats/settings.ini
@@ -29,6 +29,7 @@
 		// Здесь вы можете указать множители очков опыта. Начисление доп.опыта для гранат невозможно!
 		// Как действует формула: получаемые очки опыта умножаются на коэффициент оружия, с которого убили.
 		// Насколько умножать очки опыта, если вы убили с ...
+		// Если вам не нужны дополнительные поинты, закомментируйте/удалите все в этой секции.
 
 		"default" // Множитель по конкретному оружия по умолчанию.
 		{
