--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,11 @@
-stages:
-    - build
-UpdateData:
-  stage: build
-  tags:
-    - docker
-  #before_script:
-  script:
-    - commits=`git rev-list --all --count`
-    - release=`git describe --abbrev=0`
-    - curl --data "file=fps-commits&data=Commits-${commits}-yellow" https://blackflash.ru/git-badges/
-    - curl --data "file=fps-release&data=Release-${release}-success" https://blackflash.ru/git-badges/
-  #after_script:
-  # artifacts:
-  #   paths:
-  #       - stats.json
-  #   when: always
-  #   expire_in: 4 weeks
-  only:
-    - master
+image: rays3t/sourcemod-plugins-builder-ci
+build:
+    stage: build
+## If you want to replace version numbers, uncomment this section:
+##  variables:
+##      AUTO_VERSION_REPLACE: '1'
+    script: spcomp
+    artifacts:
+        name: "${CI_PROJECT_NAME}_${CI_COMMIT_REF_NAME}"
+        paths:
+        - compiled/*
