--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout
+      uses: actions/checkout@v1
     
     - name: Setup SourcePawn Compiler
       uses: rumblefrog/setup-sp@master
@@ -19,5 +20,5 @@ jobs:
       run: |
         which spcomp
         echo $includePath
-        spcomp -i$includePath scripting/FirePlayersStats.sp -o output/test.smx
+        spcomp -i$includePath scripting/FirePlayersStats.sp -O2 -v2 -o output/test.smx
         echo Plugin version ${{ steps.setup_sp.outputs.plugin-version }}
