--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: FirePlayersStats.smx
-        path: FirePlayersStats.smx
+        path: plugins/FirePlayersStats/FirePlayersStats.smx
