--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,33 +7,32 @@ on:
 
 jobs:
   run:
-    name: Run action
+    name: --- Run action
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: --- Checkout repository
       uses: actions/checkout@v1
     
-    - name: Setup SourcePawn Compiler
+    - name: --- Setup SourcePawn Compiler
       uses: rumblefrog/setup-sp@master
       with:
         version: "1.10.x"
     
-    - name: Verify compiler
+    - name: --- Verify compiler
       run: |
         which spcomp
         spcomp -i$includePath -iscripting/include scripting/FirePlayersStats.sp -O2 -v2 -oFirePlayersStats.smx
         
     - uses: actions/checkout@v2
-    - name: Build
+    - name: --- Build
       run: cargo build --release
       
-    - name: Upload binaries to release
+    - name: --- Upload binaries to release
       uses: svenstaro/upload-release-action@v2
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: FirePlayersStats.smx
+        file: target/release/FirePlayersStats.smx
         asset_name: FirePlayersStats.smx
         tag: ${{ github.ref }}
         overwrite: true
-        body: "Auto create release"
