--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,10 @@ jobs:
         
     - uses: actions/checkout@v2
     - name: --- Build
-      run: cargo build --release
+      run: |
+        git clone https://github.com/alacritty/alacritty.git
+        cd alacritty
+        cargo build --release
       
     - name: --- Upload binaries to release
       uses: svenstaro/upload-release-action@v2
