--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,10 @@ jobs:
 
     - name: --- Build project
       run: |
-        zip --junk-paths FirePlayersStats-${{ secrets.GITHUB_TOKEN }} README.md .gitignore .gitattributes .github
+        zip --junk-paths FirePlayersStats-${{ secrets.GITHUB_TOKEN }} cfg configs plugins scripting translations
         
     - name: --- Create Release
+      id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
