--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: --- Build project
       run: |
-        zip --junk-paths FirePlayersStats-${{ secrets.GITHUB_TOKEN }} cfg configs plugins scripting translations
+        zip --junk-paths FirePlayersStats-${{ github.ref }} cfg configs plugins scripting translations
         
     - name: --- Create Release
       id: create_release
