--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,6 +54,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./FirePlayersStats-${{ secrets.GITHUB_TOKEN }}.zip
-        asset_name: FirePlayersStats-${{ secrets.GITHUB_TOKEN }}.zip
+        asset_path: ./FirePlayersStats.zip
+        asset_name: FirePlayersStats.zip
         asset_content_type: application/zip
