--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,25 +35,10 @@ jobs:
     - name: --- Build project
       run: |
         zip -rv FirePlayersStats cfg/* configs/* plugins/* scripting/* translations/*
-        
-    - name: --- Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: --- Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${GITHUB_REF/refs\/tags\//}
-        body: Release text
-        draft: true
-        prerelease: false
-        
-    - name: --- Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./FirePlayersStats.zip
-        asset_name: FirePlayersStats-${GITHUB_REF/refs\/tags\//}.zip
-        asset_content_type: application/zip
+        files: |
+          FirePlayersStats.zip
