--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,17 @@
 name: Release Workflow
 
-on:
- push:
-   tags:
-     - '*'
+# on:
+#  push:
+#    tags:
+#      - '*'
+
+on: 
+  push:
+    branches:
+    - master
+  pull_request:
+    branches:
+    - master
 
 jobs:
   run:
