--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,14 @@ jobs:
 
     - name: --- Build project
       run: |
-        zip -rv FirePlayersStats cfg configs plugins scripting translations
+        zip -rv FirePlayersStats-${GITHUB_REF/refs\/tags\//} cfg configs plugins scripting translations
     
     - name: --- Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
+        draft: true
+        name: Release ${GITHUB_REF/refs\/tags\//}
+        body: Release text
         files: |
-          FirePlayersStats.zip
+          FirePlayersStats-${GITHUB_REF/refs\/tags\//}.zip
