--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
         spcomp -i$includePath -iscripting/include scripting/FirePlayersStats.sp -O2 -v2 -oplugins/FirePlayersStats/FirePlayersStats.smx
 
     - name: --- Build project
+      if: startsWith(github.ref, 'refs/tags/')
       run: |
         zip -rv FirePlayersStats-${GITHUB_REF/refs\/tags\//} cfg configs plugins scripting translations
     
