--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,14 +33,14 @@ jobs:
     - name: --- Build project
       if: startsWith(github.ref, 'refs/tags/')
       run: |
-        zip -rv FirePlayersStats-${GITHUB_REF/refs\/tags\//} cfg configs plugins scripting translations
+        zip -rv FirePlayersStats cfg configs plugins scripting translations
     
     - name: --- Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         draft: true
-        name: Release ${GITHUB_REF/refs\/tags\//}
+        name: Release
         body: Release text
         files: |
-          FirePlayersStats-${GITHUB_REF/refs\/tags\//}.zip
+          FirePlayersStats.zip
