--- a/cfg/sourcemod/FirePlayersStats.cfg
+++ b/cfg/sourcemod/FirePlayersStats.cfg
@@ -137,4 +137,12 @@ sm_fps_info_message "1"
 // Maximum: "1.000000"
 sm_fps_ignore_new_players "1"
 
+// [ RUS ]: Отключить вкладку 'Дополнительно' в главном меню.
+// [ ENG ]: Disable additional menu in main stats menu.
+// -
+// Default: "0"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+sm_fps_disable_additional_menu "0"
+
 
